# priority-sesh

./: .gitignore  .gitmodules  EXPERIENCES.md  Makefile  README.md  cabal.project  linear-sesh.cabal  priority-sesh.cabal  stack.yaml
doc/: arxiv.lhs  arxiv.tex  conclusion.lhs  doc.mk  fig-pgv-to-sesh-typing.lhs  fig-pgv-to-sesh.lhs  fig-pgv-typing.tex  fig-sesh-typing.lhs  introduction.lhs  linear.fmt  main.bib  main.fmt  main.lhs  pgv.lhs  preamble.tex  sesh.lhs
doc/fig/: pgv-to-sesh.lhs  pgv-typing.tex  sesh-typing.tex
doc/preamble/: pgv.tex  sesh.tex
src/: Lib.hs
src/Control/Concurrent/: Linear.hs
src/Control/Concurrent/Channel/: OneShot.hs  Session.hs
src/Control/Concurrent/Channel/Session/: DF.hs
src/Control/Concurrent/MVar/: Linear.hs
src/Control/Concurrent/OneShot/: Linear.hs
src/Control/Concurrent/Session/: Linear.hs
src/Control/Concurrent/Session/DF/Priority/: Linear.hs
src/Control/Concurrent/Session/DF/Tree/: Linear.hs
src/Control/Concurrent/Session/Raw/: Linear.hs
src/Control/Monad/Indexed/: Linear.hs
src/Data/Functor/Indexed/: Linear.hs
src/Data/Type/: Nat.hs  Period.hs  Priority.hs
src/Data/Type/Nat/: Extra.hs
src/GHC/TypeLits/: Extra.hs
src/System/IO/Linear/: Cancelable.hs
test/: Test.hs
test/Control/Concurrent/OneShot/Linear/: Test.hs
test/Control/Concurrent/Session/Linear/: Test.hs
test/Control/Concurrent/Session/Raw/Linear/: Test.hs
test/System/IO/Silently/: Linear.hs
test/Test/: OneShot.hs  Session.hs
test/Test/HUnit/: Linear.hs
test/Test/Session/: DF.hs  Priority.hs
