cabal-version:      2.4
name:               priority-sesh
version:            0.1.0.0
description:        Please see the README on GitHub at <https://github.com/wenkokke/priority-sesh#readme>
homepage:           https://github.com/wenkokke/priority-sesh#readme
bug-reports:        https://github.com/wenkokke/priority-sesh/issues
author:             Wen Kokke
maintainer:         wenkokke@users.noreply.github.com
copyright:          © Wen Kokke
license-file:       LICENSE
build-type:         Simple
extra-source-files: README.md

source-repository head
    type: git
    location: https://github.com/wenkokke/priority-sesh

-- Static deadlock freedom guarantees via Liquid Haskell
flag liquid
  description: "Enable static deadlock guarantees via Liquid Haskell"
  default:     False
  manual:      True

-- Import base depending on the liquid flag
common common-base
  if !flag(liquid)
    build-depends:    base          ==0.4.15.0.0
                    , linear-base   ==0.1.0,
  else
    build-depends:    liquid-base   ==0.4.15.0.0
                    , liquidhaskell ==0.8.10.2.1
                    , linear-base   ==0.1.0,
    ghc-options:      -fplugin=LiquidHaskell

library
  import:             common-base
  exposed-modules:    Control.Concurrent.Linear
                      Control.Concurrent.MVar.Linear
                      Control.Concurrent.OneShot.Linear
                      Control.Concurrent.Session.Linear
                      Control.Concurrent.Session.DF.Tree.Linear
                      Control.Concurrent.Session.DF.Priority.Linear
                      Data.Type.Nat
                      Data.Type.Priority
  hs-source-dirs:     src
  default-language:   Haskell2010
  default-extensions: LinearTypes


test-suite test-priority-sesh
  import:             common-base
  type:               exitcode-stdio-1.0
  main-is:            Test.hs
  other-modules:      Test.HUnit.Linear
                      Test.OneShot
                      Test.Session
                      Test.Session.Priority
  hs-source-dirs:     test
  build-depends:      HUnit         >=1.6 && <1.7,
                      silently      >=1.2 && <2.0,
                      priority-sesh
  default-language:   Haskell2010
  default-extensions: LinearTypes
