cabal-version:  2.4
name:           priority-sesh
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/wenkokke/priority-sesh#readme>
homepage:       https://github.com/wenkokke/priority-sesh#readme
bug-reports:    https://github.com/wenkokke/priority-sesh/issues
author:         Wen Kokke
maintainer:     wenkokke@users.noreply.github.com
copyright:      © Wen Kokke
license-file:   LICENSE
build-type:     Simple
extra-source-files:
  README.md

source-repository head
  type:             git
  location:         https://github.com/wenkokke/priority-sesh

common common-depends
  build-depends:      base        >=4.7 && <5
                    , linear-base >=0.1 && <0.2
  default-language:   Haskell2010
  default-extensions: LinearTypes
                    , ImportQualifiedPost

library
  import:             common-depends
  exposed-modules:    Control.Concurrent.Linear
                      Control.Concurrent.OneShot.Linear
                      Control.Concurrent.Session.Linear
                      Control.Concurrent.Session.DF.Tree.Linear
                      Control.Concurrent.Session.DF.Priority.Linear
                      Data.Type.Nat
                      Data.Type.Priority
  other-modules:      Control.Concurrent.MVar.Linear
                      System.Mem.Weak.Linear
  hs-source-dirs:     src

test-suite test-priority-sesh
  import:             common-depends
  type:               exitcode-stdio-1.0
  main-is:            Test.hs
  other-modules:      Test.HUnit.Linear
                      Test.OneShot
                      Test.Session
                      Test.Session.Priority
  hs-source-dirs:     test
  build-depends:      HUnit    >=1.6 && <1.7
                    , silently >=1.2 && <2.0
                    , priority-sesh
