cabal-version:  2.4
name:           priority-sesh
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/wenkokke/priority-sesh#readme>
homepage:       https://github.com/wenkokke/priority-sesh#readme
bug-reports:    https://github.com/wenkokke/priority-sesh/issues
author:         Wen Kokke
maintainer:     wenkokke@users.noreply.github.com
copyright:      © Wen Kokke
license-file:   LICENSE
build-type:     Simple
extra-source-files:
  README.md

source-repository head
  type:             git
  location:         https://github.com/wenkokke/priority-sesh

common common-depends
  build-depends:      base        >=4.7 && <5
                    , linear-base >=0.1 && <0.2
  default-language:   Haskell2010
  default-extensions: ExplicitNamespaces
                    , FlexibleContexts
                    , FlexibleInstances
                    , GADTSyntax
                    , ImportQualifiedPost
                    , InstanceSigs
                    , LinearTypes
                    , RebindableSyntax

library
  import:             common-depends
  exposed-modules:    Control.Concurrent.Channel.OneShot
                    , Control.Concurrent.Linear
                    , Control.Concurrent.Channel.Session
                    , Control.Concurrent.Channel.Session.DF
                    , Data.Type.Nat.Extra
                    , Data.Type.Period
                    , Data.Type.Priority
                    , System.IO.Linear.Cancelable
  hs-source-dirs:     src

test-suite test-priority-sesh
  import:             common-depends
  type:               exitcode-stdio-1.0
  main-is:            Test.hs
  other-modules:      Test.HUnit.Linear
                      Test.OneShot
                      Test.Session
                      Test.Session.DF
  hs-source-dirs:     test
  build-depends:      HUnit    >=1.6 && <1.7
                    , silently >=1.2 && <2.0
                    , priority-sesh
